chore: enable native access for java.lang.foreign warnings
Add --enable-native-access=ALL-UNNAMED flag to native-image invocations
to suppress warnings about restricted methods in java.lang.foreign being
called by the jtreesitter library.